# composable-allocators

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
src/: as_global.rs  base.rs  fallbacked.rs  freelist.rs  global.rs  impossible.rs  lib.rs  limited_up_to.rs  logging.rs  non_working.rs  or.rs  posix.rs  stacked.rs  system.rs  up_to.rs  winapi.rs
