[package]
edition = "2021"
name = "composable-allocators"
version = "0.1.3"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Composable memory allocators for new allocator API."
readme = "README.md"
documentation = "https://docs.rs/composable-allocators/"
keywords = ["allocator", "memory", "composable", "fallback", "never_type"]
categories = ["memory-management", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/composable-allocators"

[workspace]
exclude = [
    "ensure_no_std",
]

[features]
default = ["global", "system"]
global = []
winapi = ["dep:winapi"]
posix = ["dep:libc"]
system = ["dep:winapi", "dep:libc"]

[target.'cfg(all(not(target_os="dos"), windows))'.dependencies]
winapi = { version = "0.3.9", features = ["heapapi", "minwindef", "ntdef"], optional = true }

[target.'cfg(all(not(target_os="dos"), not(windows)))'.dependencies]
libc = { version = "0.2.126", default-features = false, optional = true }

[badges]
maintenance = { status = "experimental" }
